﻿drkns 28.04.2016 10:40:27 +0200 - build 4642

1. Уточнение 4631.

drkns 26.04.2016 22:50:38 +0200 - build 4641

1. Уточнение 4635: показываем "remaining:" при копировании одного файла и обновляем его с той же частотой, что и скорость.

zg 26.04.2016 16:23:31 +0200 - build 4640

1. в диалоге копирования была возможность выбрать "Also ask on R/O files".

2. уточнение посылки DN_INPUT/DN_CONTROLINPUT для открытого комбобокса.

3. убрано странное поведение по восстановлению старой позиции в списке, если DN_LISTHOTKEY обработан.

zg 26.04.2016 03:41:23 +0200 - build 4639

1. убран неиспользуемый код.

zg 25.04.2016 23:43:02 +0200 - build 4638

1. при открытом комбобоксе не работал граббер.

2. DM_SETCOMBOBOXEVENT возвращало мусор.

drkns 24.04.2016 11:15:15 +0200 - build 4637

1. Уточнение 4633.

drkns 24.04.2016 10:02:26 +0200 - build 4636

1. Уточнение 4635.

drkns 23.04.2016 19:19:54 +0200 - build 4635

1. По просьбам телезрителей: в диалоге копирования отображаем счётчики как "%done% / %total%", а не наоборот.

2. Рефакторинг.

drkns 23.04.2016 02:03:50 +0200 - build 4634

1. С форума: lua:far.Message"aaa". После закрытия диалога заголовок консоли не восстанавливается.

drkns 23.04.2016 01:59:07 +0200 - build 4633

1. Рефакторинг.

shmuel 23.04.2016 00:03:37 +0200 - build 4632

1. Экспериментально: снятие тормозов с ECTL_INSERTSTRING (стало быстрее примерно в 50 раз).

drkns 20.04.2016 22:42:13 +0200 - build 4631

1. При вызове диалогов через главное меню не устанавливался правильный заголовок консоли.
   Да и в целом с этим заголовком творилась какая-то дичь. Многое переделано, возможны баги.

drkns 20.04.2016 17:33:13 +0200 - build 4630

1. Рефакторинг.

zg 20.04.2016 13:21:24 +0200 - build 4629

1. уточнение 4628.

zg 20.04.2016 02:44:24 +0200 - build 4628

1. убрана отложенная сортировка цветовых областей в редакторе.

w17 20.04.2016 01:39:19 +0300 - build 4627

1. Fix 4492.

drkns 19.04.2016 22:42:16 +0200 - build 4626

1. gcc build fix.

2. Refactoring.
