@@ -1,4 +1,8 @@
-﻿drkns 28.04.2016 10:40:27 +0200 - build 4642
+﻿zg 28.04.2016 13:20:04 +0200 - build 4643
+
+1. в комбобоксе не срабатывал хоткей для текущего элемента.
+
+drkns 28.04.2016 10:40:27 +0200 - build 4642
 
 1. Уточнение 4631.
 
